<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Report -->
    <string name="report">Report</string>
    <string name="reportText">Report Successful</string>

    <!-- Activity Labels -->
    <string name="app_name">PickIt</string>
    <string name="profile_admin">Profile Admin</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1589926514552725</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="guest_login">Guest Login</string>
    <string name="rememberMe">Remember Me</string>
    <string name="createAccount">Create account</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="bday">Birthday</string>

    <!-- toggle buttons -->
    <string name="recency">Recent</string>
    <string name="recency_selected">~* Recent *~</string>
    <string name="trending">Trending</string>
    <string name="trending_selected">~* Trending *~</string>
    <string name="expiring">Expiring</string>
    <string name="expiring_selected">~* Expiring *~</string>
    <string name="edit_profile">Edit</string>
    <string name="upload">Upload</string>
    <string name="voted_on">Voted On</string>
    <string name="users_uploads">Uploads</string>
    <string name="users_uploads_selected">~* Uploads *~</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="recent_activity_selected">~* Recent Activity *~</string>

    <string name="uploaded">Your Uploads</string>
    <string name="friendsRecentUploads">Friends\' Uploads</string>
    <string name="friends">Friends</string>

    <string name="selectdate">mm/dd/yyyy</string>
    <string name="selecttime">hh:mm</string>

    <!-- Demographic Categories -->
    <string name="gender">Gender</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="political">Political Affiliation</string>
    <string name="religion">Religion</string>
    <string name="age">Age</string>

    <string name="required">Must change...</string>

    <string-array name="gender_array">
        <item>Must change...</item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string-array name="ethnicity_array">
        <item>Must change...</item>
        <item>African</item>
        <item>African American</item>
        <item>Asian</item>
        <item>Caucasian</item>
        <item>Hispanic</item>
        <item>Latino</item>
        <item>Native American</item>
        <item>Pacific Islander</item>
        <item>Other</item>
    </string-array>
    <string-array name="political_affiliation_array">
        <item>Must change...</item>
        <item>Democrat</item>
        <item>Independent</item>
        <item>Republican</item>
        <item>Other</item>
        <item>None</item>
    </string-array>
    <string-array name="religion_array">
        <item>Must change...</item>
        <item>Buddhism</item>
        <item>Christianity</item>
        <item>Hinduism</item>
        <item>Islam</item>
        <item>Judaism</item>
        <item>Other</item>
        <item>None</item>
    </string-array>
    <string-array name="categories_array">
        <item>All categories</item>
        <item>Entertainment</item>
        <item>Fashion</item>
        <item>People</item>
        <item>Food</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_temp">temp</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile_admin">ProfileAdminActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="category_menu">Categories</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="uploadDescription">Upload a PickIt</string>
    <string name="subjectHeading">Subject Heading</string>
    <string name="topLeftPane">Top Left Pane</string>
    <string name="galleryUpload">Upload from gallery</string>
    <string name="cameraUpload">Take picture</string>
    <string name="descriptionHint">Upload Description...</string>
    <string name="dateHint">End Date</string>
    <string name="timeHint">Stopping Time</string>
    <string name="vote">Vote</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="next_graph_button">Next Graph</string>

</resources>