<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/accountAdminTextBox"
            android:text="@string/account_admin"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#ff417286"
            android:textSize="@android:dimen/app_icon_size"
            android:textIsSelectable="false"
            android:textStyle="bold|italic" />
    </TableRow>
    <TableRow>
        <ScrollView
            android:id="@+id/admin_scrollView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/custom_table_border"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:layout_margin="10dp" >

            <RelativeLayout
                android:id="@+id/accountAdminLayout"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <EditText
                    android:id="@+id/usernameDemoTextbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:hint="@string/username"
                    android:gravity="center_horizontal"
                    android:focusable="true"
                    android:enabled="true"
                    android:focusableInTouchMode="true"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:id="@+id/passwordDemoTextbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/password"
                    android:gravity="center_horizontal"
                    android:focusable="true"
                    android:enabled="true"
                    android:focusableInTouchMode="true"
                    android:layout_below="@+id/usernameDemoTextbox"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:id="@+id/confirmDemoTextbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/confirmPassword"
                    android:gravity="center_horizontal"
                    android:focusable="true"
                    android:enabled="true"
                    android:focusableInTouchMode="true"
                    android:layout_below="@+id/passwordDemoTextbox"
                    android:layout_alignStart="@+id/passwordDemoTextbox" />

                <TextView
                    android:id="@+id/textView_bday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bday"
                    android:textStyle="bold|italic"
                    android:layout_below="@+id/confirmDemoTextbox"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp" />

                <EditText
                    android:id="@+id/textField_bday"
                    android:background="@drawable/custom_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:hint="@string/date_format"
                    android:maxLines="1"
                    android:layout_below="@+id/textView_bday"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/textView_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:layout_below="@+id/textField_bday"
                    android:layout_alignStart="@+id/textView_bday"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold|italic" />

                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/textView_gender"
                    android:layout_alignEnd="@+id/spinner_ethnicity"
                    android:layout_alignStart="@+id/textField_bday" />

                <TextView
                    android:id="@+id/textView_ethnicity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ethnicity"
                    android:layout_below="@+id/spinner_gender"
                    android:layout_marginTop="20dp"
                    android:layout_alignStart="@+id/textView_gender"
                    android:textStyle="bold|italic" />

                <Spinner
                    android:id="@+id/spinner_ethnicity"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/textView_ethnicity"
                    android:layout_alignEnd="@+id/textField_bday"
                    android:layout_alignStart="@+id/textField_bday" />

                <TextView
                    android:id="@+id/textView_religion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/religion"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/spinner_ethnicity"
                    android:layout_alignEnd="@+id/textView_gender"
                    android:textStyle="bold|italic" />

                <Spinner
                    android:id="@+id/spinner_religion"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/textView_religion"
                    android:layout_alignStart="@+id/spinner_ethnicity"
                    android:layout_alignEnd="@+id/spinner_ethnicity" />

                <TextView
                    android:id="@+id/textView_political"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/political"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/spinner_religion"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold|italic" />

                <Spinner
                    android:id="@+id/spinner_political"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/textView_political"
                    android:layout_alignEnd="@+id/spinner_religion"
                    android:layout_alignStart="@+id/spinner_religion" />

                <Button
                    android:id="@+id/button_save"
                    android:background="@drawable/custom_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/save"
                    android:layout_marginTop="20dp"
                    android:onClick="onClickSave"
                    android:layout_below="@+id/spinner_political"
                    android:layout_centerHorizontal="true" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:minHeight="100dp"
                    android:minWidth="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

            </RelativeLayout>
        </ScrollView>
    </TableRow>
</TableLayout>

